[package]
name = "pika_pulse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = {version = "4.0", features = ["derive"]}
ringbuf = "0.3"
hound = "3.5"
alsa = "0.8.1"


[[bin]]
name = "pika_pulse"
path = "main.rs"
